# lfEncoding

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md
scripts/: GPUDecodingTest  avgCalculator.py  interpolate.py  lfBlending.py  measurement  metrics  reverseOrder  sparser  test.sh  timeHEVC.sh  visualQuality
src/: analyzer.cpp  analyzer.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp  utils.cpp  utils.h
